# mapy-nageografiepl-be

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  mapy-nageografiepl-be.sublime-project  rustfmt.toml
.github/workflows/: build.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/services/teachers/: mod.rs  sign_up.rs
app/src/services/teachers/sessions/: mod.rs  refresh.rs  sign_in.rs  sign_out.rs
app/src/utils/: constants.rs  macros.rs  mod.rs  password.rs
db/: Cargo.toml
db/migrations/2021-01-09-195052_create_teachers/: down.sql
db/migrations/2021-01-12-121555_create_sessions/: down.sql
db/src/: lib.rs
db/src/models/: mod.rs  session.rs  teacher.rs
db/src/repositories/: mod.rs  repository.rs  sessions_repository.rs  teachers_repository.rs
db/src/utils/: connection_pool.rs  errors.rs  migrations.rs  mod.rs  test.rs  types.rs
docker/: web.Dockerfile
docker/stubs/: app.toml  db.toml  web.toml
migrations/2021-01-09-195052_create_teachers/: down.sql  up.sql
migrations/2021-01-12-121555_create_sessions/: down.sql  up.sql
src/: main.rs  schema.rs
src/controllers/: mod.rs
src/controllers/status/: mod.rs  web_healthcheck.rs
src/controllers/teachers/: create.rs  mod.rs
src/controllers/teachers/sessions/: create.rs  destroy.rs  mod.rs  refresh.rs
src/models/: mod.rs  session.rs  teacher.rs
src/services/: mod.rs
src/services/teachers/: create.rs  mod.rs
src/services/teachers/sessions/: create.rs  destroy.rs  mod.rs  refresh.rs
src/utils/: db.rs  errors.rs  globals.rs  http.rs  mod.rs  password.rs  responses.rs  token.rs  unit_tests.rs
src/utils/macros/: controller_macros.rs  database_macros.rs  error_macros.rs  mod.rs  unit_test_macros.rs
web/: Cargo.toml
web/src/: main.rs  prelude.rs
web/src/config/: mod.rs  routes.rs
web/src/config/initializers/: db_connection_pool.rs  environment.rs  logger.rs  migrations.rs  mod.rs  port.rs  rollbar.rs
web/src/controllers/: mod.rs
web/src/controllers/status/: mod.rs  web_healthcheck.rs
web/src/controllers/teachers/: create.rs  mod.rs
web/src/controllers/teachers/sessions/: create.rs  destroy.rs  mod.rs  refresh.rs
web/src/serializers/: mod.rs  session_serializer.rs
web/src/utils/: macros.rs  mod.rs  responses.rs
