[package]
name = "mapy-nageografiepl-be"
version = "0.1.0"
authors = ["Wojciech Olejnik <divoolej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3.3.2"
base64 = "^0.13"
chrono = { version = "^0.4.19", features = ["serde"] }
diesel = { version = "^1.4.5", features = ["r2d2", "postgres", "chrono"] }
dotenv = "^0.15.0"
env_logger = "^0.8.2"
log = "^0.4.11"
rand = "^0.7.3"
regex = "^1.4.3"
rust-argon2 = "^0.8.3"
rust-s3 = "^0.26.4"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
uuid = { version = "^0.8.1", features = ["v4"] }
