[package]
name = "app"
version = "0.1.0"
authors = ["Wojciech Olejnik <divoolej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
chrono = "0.4.19"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.4.3"
rollbar = "0.7.0"
rust-argon2 = "0.8.3"
serde = { version = "1.0.123", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
serial_test = "0.5.1"
