[package]
name = "db"
version = "0.1.0"
authors = ["Wojciech Olejnik <divoolej@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
diesel = { version = "1.4.5", features = ["r2d2", "postgres", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.3"
thiserror = "1.0.23"
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
serial_test = "0.5.1"
