[package]
name = "web"
version = "0.1.0"
authors = ["Wojciech Olejnik <divoolej@gmail.com>"]
edition = "2018"

[dependencies]
db = { path = "../db" }
app = { path = "../app" }
actix-web = "3.3.2"
backtrace = "0.3.56"
dotenv = "0.15.0"
env_logger = "0.8.2"
log = "0.4.14"
rollbar = "0.7.0"
serde = { version = "1.0.123", features = ["derive"] }
actix-rt = "1.1.1"
chrono = { version = "0.4.19", features = ["serde"] }
